<resources>
    <string name="app_name">Happy Shopper</string>

    <!-- pick list menu screen starts -->
    <string name="pick_list_menu_header">Select a zone:</string>
    <string name="pick_list_menu_ambient">Ambient:</string>
    <string name="pick_list_menu_chilled">Chilled:</string>
    <string name="pick_list_menu_frozen">Frozen:</string>
    <string name="pick_list_menu_produce">Produce:</string>
    <string name="pick_list_menu_next_pick_list">Next Pick List:</string>
    <string name="pick_list_menu_main_menu">Main Menu</string>
    <string name="title_activity_main2">HappyShopper</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--  -->

</resources>