<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3C1C1"
    android:onClick="getPickList"
    tools:context=".MainActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/theListView"></ListView>

    <Button
        android:id="@+id/button_ambient"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="getPickList"
        android:text="@string/pick_list_menu_ambient"
        app:layout_constraintBottom_toTopOf="@+id/button_frozen"
        app:layout_constraintEnd_toStartOf="@+id/button_chilled"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_frozen"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="getPickList"
        android:text="@string/pick_list_menu_frozen"
        app:layout_constraintEnd_toStartOf="@+id/button_produce"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_produce"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="214dp"
        android:layout_marginLeft="214dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:onClick="getPickList"
        android:text="@string/pick_list_menu_produce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_chilled"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="16dp"
        android:onClick="getPickList"
        android:text="@string/pick_list_menu_chilled"
        app:layout_constraintBottom_toTopOf="@+id/button_produce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_mainmenu"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="463dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/pick_list_menu_main_menu"
        app:layout_constraintEnd_toStartOf="@+id/button_nextpicklist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_nextpicklist"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="463dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:text="@string/pick_list_menu_next_pick_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pick_menu_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="620dp"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/pick_list_menu_header" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="55dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="51dp" />

</androidx.constraintlayout.widget.ConstraintLayout>